Read through chapter 6

--- a/sections/06-conclusion.tex
+++ b/sections/06-conclusion.tex
@@ -1,19 +1,25 @@
 \chapter{Conclusion}
 
-Evaluating the SAFE Network in its current state does the project an injustice. It is not finished yet and they don't claim it to be. Uncertainties in implementation details, especially \textit{Safecoin}, brings into question how successful the project will be in the long run. Proper incentives for \textit{vault} owners is crucial in the success of the network. The next big step for the project is the implementation of Datachain's (Section \ref{sec:datachain}) and it will be very interesting to see how successful that is. Maidsafe have performed simulations on how \textit{section splits} and \textit{merges} will happen but to see how things handle with a real network will be interesting. There is the real concern of what happens when large parts of the network fail, something that Datachain's hope to address.
+Evaluating the SAFE Network in its current state does the project an injustice, it is not finished yet. Uncertainties in implementation details, especially \textit{Safecoin}, brings into question how successful the project will be in the long run. Proper incentives for \textit{vault} owners is crucial in the success of the network. The next big step for Maidsafe is the implementation of Datachain's (Section \ref{sec:datachain}) and it will be very interesting to see how successful they are.
 
-The infancy of the SAFE Network has made this project difficult. No central and reliable resources for developers is nightmarish when time is precious, such as in building SAFE Wiki. Upon conclusion of this project, SAFE Wiki is a fully functional application that can be used with the current version of the SAFE Network. Assuming that the API won't have any ``breaking'' changes, if and when the SAFE Network fully launches SAFE Wiki will be available for use. People all over the world will be able to access resources like Wikipedia that are hosted on a decentralised and censorship resistant platform.
+The SAFE Network ultimately provides an interesting new way to develop applications and services. Developers will have to re-think how they build applications to exploit the characteristics of the SAFE Network to their benefit. Although SAFE Wiki demonstrates that the secure storage and retrieval of data is already possible, the feasibility of running large websites and services that require extremely fast processing needs to be researched fully. The performance of how a world wide SAFE Network with dynamic growth and decay will only be known once it fully launches.
 
-The SAFE Network ultimately provides an interesting new way to develop applications and services. Developers will have to re-think how they build applications and give proper attention as to how to exploit the characteristics of the SAFE Network to their benefit. Although SAFE Wiki demonstrates that the secure storage and retrieval of data is already possible, more studies and analysis on the feasibility of different applications on the  SAFE Network is needed. Specifically the feasibility of running large websites and services that require extremely fast processing of data needs to be researched fully. The performance of how a world wide SAFE Network with dynamic growth and decay will only be known once it fully launches. It is only then that a true mandate for the use of the SAFE Network can be established. 
+The passion exerted by the team at Maidsafe can only inspire confidence in that they will try their very hardest to achieve all of their goals. This is in-spite of all of the challenges that they still have to solve. The success of the SAFE Network is not only dictated by its success, but by the success of any projects that are built because of it. Whether this be a SAFE Network ``2.0'' or an entirely new project that Maidsafe has laid the foundations for.
 
-The passion exerted by the team at Maidsafe can only inspire confidence in that they will try their very hardest to achieve all of their goals. This is in-spite of all the challenges that still have to be answered and solved. The challenges do however bring into question whether they will all be solved before a ``1.0'' release of the network. If the ``1.0'' release of the network merely lays the foundations for a version ``2.0'' is a question that cannot be answered. The biggest problem that faces Maidsafe however is how to convince traditional businesses that the SAFE Network is commercially viable.
+\section{Personal Reflection}
 
-\section{Attribution}
+This project was one of the most difficult I have ever undertaken. The lack of resources available made development extremely difficult and tiring at times. It took a good few months before I was even comfortable with the basic concepts of the SAFE Network. Indeed I discovered some of my knowledge was completely flawed while writing this dissertation.
 
-This project would not have been possible without the support of my supervisor Inah Omoronyia. I will be forever grateful for being introduced to the SAFE Network and having my horizons on how applications can built expanded.
+I am very proud of the application that was developed, SAFE Wiki is a good example of what the SAFE Network can do. If and when the SAFE Network fully launches, I hope that some may find SAFE Wiki of actual use.
 
-I owe gratitude to Maidsafe themselves in that they gave us the opportunity to meet with them at their headquarters in Ayr. The hour we spent together was very illuminating and I truly hope it is not the last interaction that I have with them.
+The biggest thing I learned from this project is that community in software development is important. Without the help of the community around the SAFE Network, this project simply wouldn't have been possible. When I first announced my project on the forums\footnote{https://safenetforum.org/t/safe-wiki-wikipedia-on-the-safe-network/21493}, it was exciting to hear the positive response from the community. A few even tried SAFE Wiki out for themselves! It is through this community involvement that I have been invited to speak at Maidsafe's first dev-conference, an extremely exciting opportunity to develop myself professionally.
 
-To the forum and community members that answered my queries and questions I owe a great deal of thanks. Most of them are just fellow humans, volunteers who's unwavering passion for the work that Maidsafe is doing really shines through. Without their help and answering of my questions I wouldn't have been able to build SAFE Wiki.
+\section{Acknowledgements}
 
-The creators of Kiwix are truly inspiring people. The work that they do in delivering free educational content to the people who most need it is truly inspiring. I hope to be able to contribute something back to their projects in the future. 
+This project would not have been possible without the support of my supervisor Inah Omoronyia, a huge thank you to him.
+
+Maidsafe were gracious enough to invite us to their headquarters in Ayr, the hour we spent together was very illuminating.
+
+To the community members that answered the many queries and questions that I had, I owe a great deal of thanks. Without their help this project would not have been possible.
+
+The creators of Kiwix are truly inspiring people. The work that they do in delivering free educational content to the people who need it most is very noble. I hope to be able to contribute something back to their projects in the future.
