Write an abstract

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -13,12 +13,14 @@ style=ieee
 \addbibresource{bibliography.bib}
 
 \begin{document}
-\title{Building Applications on the SAFE Network}	
+\title{Building Applications on the SAFE Network}
 \author{David Brown}
 \maketitle
 
 \begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+Decentralised data storage networks present exciting new ways to build applications, the SAFE Network is such a system. To explore its effectiveness an application called SAFE Wiki was built. SAFE Wiki facilitates the storage and browsing of websites like Wikipedia on the SAFE Network. From the evaluation of the current implementation of the SAFE Network, numerous issues have been highlighted. The rigidity of how applications must be built presents challenges for software development. Whether these challenges can be solved dictates the ultimate success of the SAFE Network.
+
 \end{abstract}
 
 \educationalconsent
