--- a/dissertation.tex
+++ b/dissertation.tex
@@ -19,7 +19,7 @@ style=ieee
 
 \begin{abstract}
 
-The SAFE Network is a decentralised peer-to-peer data storage network. To explore its effectiveness for use in software development, an application called SAFE Wiki was built. SAFE Wiki facilitates the storage and browsing of websites like Wikipedia on the SAFE Network. Through the evaluation, a number of potential issues with the adoption and use of the SAFE Network has been highlighted. The rigidity of how applications must be built presents challenges for software development. Whether these challenges can be solved dictates the ultimate success of the SAFE Network.
+The SAFE Network is a decentralised peer-to-peer data storage network. To explore its effectiveness for use in software development, an application called SAFE Wiki was built. SAFE Wiki facilitates the storage and browsing of websites like Wikipedia on the SAFE Network. Through the evaluation, a number of potential issues with the adoption and use of the SAFE Network has been highlighted. The rigidity of how applications must be built presents challenges for software development, whether these challenges can be solved will dictate the ultimate success of the SAFE Network.
 
 \end{abstract}
 
